fixing product align

--- a/src/pages/admin/app/Product/ProductList/ProductList.module.scss
+++ b/src/pages/admin/app/Product/ProductList/ProductList.module.scss
@@ -39,6 +39,7 @@
    max-height: 80vh;
    overflow-y: scroll;
    margin-top: 5%;
+   margin-left: 5%;
    padding-left: 10%;
    padding-right: 10%;
 }
